Add fastapi to requirements for deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+fastapi
+uvicorn[standard]
 praw
 tweepy
 openai  # For summarization (or use another LLM)
 requests
 python-dotenv
-uvicorn[standard]
